# modular-suspension-analysis

./: .gitignore  3dtest.ipynb  Five_Link.py  README.md  approx_guess_demo.py  approx_guess_tests.py  approximation_texts.py  component_tests.py  five_link.xlsx  five_link_demo.ipynb  five_link_tests.py  independent_suspension.py  kinematic_model_testing.py  main.py  pyproject.toml  single_link_render_demo.py  stupid_bullshit.py  suspension_components.py  tests.py  upright_rotate_demo.py  visual_test.py
.ipynb_checkpoints/: 3dtest-checkpoint.ipynb  five_link_demo-checkpoint.ipynb
Archive/: kinematic_model_testing.py  rotation_tests.py  tests.py
Tests/: component_tests.py  five_link_tests.py  test_components.py  test_independent_suspension.py  upright_rotate_demo.py  visual_test.py
Unused_Code/: Test_1.csv  five_link.py
benchmarks/: callable_benchmark.py  roation_benchmark.py
demo_code/: five_link_demo.ipynb  table_generation_demo.py
demo_code/.ipynb_checkpoints/: five_link_demo-checkpoint.ipynb
modsuskinematics/: independent_suspension.py
src/: approx_guess_demo.py  five_link_demo.ipynb  initial_guess_demo.py
src/demo_code/: five_link_demo.ipynb
src/suspmatics/: components.py  independent_suspension.py  visuals.py
suspension_kinematics/: components.py  independent_suspension.py  visuals.py
