[build-system]
requires = ["hatchling>=61.0"]
build-backend = "hatchling.build_meta"

[project]
name = "suspmatics"
version = "0.0.1"
authors = [
  { name="Michael Panzer", email="michaelpanzer04@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
