[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build_meta"

[project]
name = "suspmatics"
version = "0.0.1"
dependencies = [
  "matplotlib>=3.10.1"
  "numpy>=2.1.3",
  "scipy>=1.14.1",
  "vpython>=7.6.5"

]
authors = [
  { name="Michael Panzer", email="michaelpanzer04@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"


[tool.mypy]
strict = true

